Documentacion y compatibilidad con Java 8